--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -3241,6 +3241,32 @@ header.header {
                 }
             }
         }
+        .schedule {
+            .payment-one-month-checkbox {
+                label {
+                    padding-left: 30px;
+                    padding-top: 5px;
+                    &:after {
+                        border-width: 2px;
+                        border-color:  #02b691;
+                        border-style: solid;
+                        content: "";
+                        height: 21px;
+                        position: absolute;
+                        left: 0;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        width: 22px;
+                    }
+                }
+                input[type=checkbox].css-checkbox:checked + label.css-label {
+                    &:after {
+                        background-position: none !important;
+                        background: url("../images/checked.png") no-repeat !important;
+                    }
+                }
+            }
+        }
         .payment-methods {
             #payment-methods-select {
                 width: 300px;
