--- a/towndeli/assets/less/main.less
+++ b/towndeli/assets/less/main.less
@@ -2579,31 +2579,14 @@ header.header {
             right: 5px;
             top: 4px;
         }
-        .media {
-            margin-top: 0;
-            .media-left {
-                padding-right: 25px;
-                @media (max-width: @screen-xs-max) {
-                    display: block;
-                    padding-right: 0;
-                }
-                .img-container {
-                    width: 370px;
-                    @media (max-width: @screen-xs-max) {
-                        display: block;
-                        margin: 0 auto 15px;
-                        width: 320px;
-                    }
-                    @media (max-width: @screen-xs-min) {
-                        width: 100%;
-                        margin-top: 15px;
-                    }
-                    img {
-                        width: 100%;
-                    }
-                }
+        .content {
+            @media (max-width: 860px) {
+                margin-top: 10px;
             }
-            .media-body {
+            .body {
+                @media (max-width: 860px) {
+                    margin-top: 15px;
+                }
                 .quickview-header {
                     position: relative;
                     h4 {
@@ -2708,7 +2691,6 @@ header.header {
                             padding: 4px 18px;
                         }
                     }
-
                     .add-topping-checkbox, .require-checkbox {
                         label {
                             padding-left: 30px;
@@ -2731,6 +2713,93 @@ header.header {
                                 background-position: none !important;
                                 background: url("../images/checked.png") no-repeat !important;
                             }
+                        }
+                    }
+                    .add-topping-content {
+                        #addToppingTab {
+                            border: 1px solid #e0e0e0;
+                            .nav-pills {
+                                border-bottom: 1px solid #e0e0e0;
+                                li {
+                                    @media (max-width: 530px) {
+                                        height: 55px;
+                                    }
+                                    width: 20%;
+                                    margin-left: 0 !important;
+                                    background-color: #eeeeee;
+                                    &.active {
+                                        background-color: #02b691 !important;
+                                        a {
+                                            color:  #ffffff;
+                                            background-color: #02b691 !important;
+                                            &:hover {
+                                                background-color: #02b691 !important;
+                                            }
+                                        }
+                                    }
+                                    a {
+                                        @media (max-width: 530px) {
+                                            padding-left: 5px !important;
+                                            font-size: 12px;
+                                        }
+                                        background-color: #eeeeee;
+                                        border-radius: 0;
+                                        color:  #000000;
+                                        font-size: 14px;
+                                        font-weight: 400;
+                                    }
+                                }
+                            }
+                            .tab-content {
+                                border-color:  #e0e0e0;
+                                background-color:  #eeeeee;
+                                padding : 5px 15px;
+                                max-height: 200px;
+                                overflow-y: auto;
+                                .topping-checkbox{
+                                    label {
+                                        padding-left: 30px;
+                                        // padding-top: 5px;
+                                        color:  #515252;
+                                        font-size: 14px;
+                                        font-weight: 400;
+                                        &:after {
+                                            border-width: 2px;
+                                            border-color:  #bbbbbb;
+                                            border-style: solid;
+                                            content: "";
+                                            height: 21px;
+                                            position: absolute;
+                                            left: 0;
+                                            top: 50%;
+                                            transform: translateY(-50%);
+                                            width: 22px;
+                                        }
+                                        &:before {
+                                            display: none;
+                                        }
+                                    }
+                                    input[type=checkbox].css-checkbox:checked + label.css-label {
+                                        &:after {
+                                            background-position: none !important;
+                                            background: url("../images/checked.png") no-repeat !important;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .require-content {
+                        .note {
+                            border: 2px solid #bbbbbb;
+                            box-sizing: border-box;
+                            background-color: #ffffff;
+                            padding: 5px;
+                            width: 100%;
+                            height: 136px;
+                            color:  #999999;
+                            font-size: 14px;
+                            font-weight: 400;
                         }
                     }
                 }
