--- a/towndeli/assets/styles/styles.css
+++ b/towndeli/assets/styles/styles.css
@@ -9881,107 +9881,86 @@ header.header .top-links li .child-box ul li a.highlight {
   right: 5px;
   top: 4px;
 }
-.quickview-modal .quickview-inner .media {
-  margin-top: 0;
-}
-.quickview-modal .quickview-inner .media .media-left {
-  padding-right: 25px;
-}
-@media (max-width: 857px) {
-  .quickview-modal .quickview-inner .media .media-left {
-    display: block;
-    padding-right: 0;
+@media (max-width: 860px) {
+  .quickview-modal .quickview-inner .content {
+    margin-top: 10px;
   }
 }
-.quickview-modal .quickview-inner .media .media-left .img-container {
-  width: 370px;
-}
-@media (max-width: 857px) {
-  .quickview-modal .quickview-inner .media .media-left .img-container {
-    display: block;
-    margin: 0 auto 15px;
-    width: 320px;
-  }
-}
-@media (max-width: 480px) {
-  .quickview-modal .quickview-inner .media .media-left .img-container {
-    width: 100%;
+@media (max-width: 860px) {
+  .quickview-modal .quickview-inner .content .body {
     margin-top: 15px;
   }
 }
-.quickview-modal .quickview-inner .media .media-left .img-container img {
-  width: 100%;
-}
-.quickview-modal .quickview-inner .media .media-body .quickview-header {
+.quickview-modal .quickview-inner .content .body .quickview-header {
   position: relative;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-header h4 {
+.quickview-modal .quickview-inner .content .body .quickview-header h4 {
   font-size: 24px;
   margin: 0 0 15px;
   text-transform: uppercase;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-header p {
+.quickview-modal .quickview-inner .content .body .quickview-header p {
   font-size: 14px;
   line-height: 1.2;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-header .share-icons {
+.quickview-modal .quickview-inner .content .body .quickview-header .share-icons {
   font-size: 0;
   position: absolute;
   right: 0;
   top: 0;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-header .share-icons a {
+.quickview-modal .quickview-inner .content .body .quickview-header .share-icons a {
   margin-left: 10px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options {
+.quickview-modal .quickview-inner .content .body .quickview-options {
   border-bottom: 1px solid #e6e6e5;
   border-top: 1px solid #e6e6e5;
   margin-bottom: 15px;
   padding: 20px 0;
 }
 @media (max-width: 1199px) {
-  .quickview-modal .quickview-inner .media .media-body .quickview-options .row > div {
+  .quickview-modal .quickview-inner .content .body .quickview-options .row > div {
     margin-bottom: 10px;
   }
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .list-size {
+.quickview-modal .quickview-inner .content .body .quickview-options .list-size {
   float: left;
   font-size: 0;
   margin-bottom: 0;
 }
 @media (max-width: 857px) {
-  .quickview-modal .quickview-inner .media .media-body .quickview-options .list-size {
+  .quickview-modal .quickview-inner .content .body .quickview-options .list-size {
     float: initial;
     margin-bottom: 10px;
   }
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .list-size li {
+.quickview-modal .quickview-inner .content .body .quickview-options .list-size li {
   display: inline-block;
   font-size: 12px;
   margin-right: 10px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .list-size li a {
+.quickview-modal .quickview-inner .content .body .quickview-options .list-size li a {
   background-color: #02b691;
   border-radius: 6px;
   color: #fff;
   display: inline-block;
   padding: 8px 14px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .wrap-quantity {
+.quickview-modal .quickview-inner .content .body .quickview-options .wrap-quantity {
   float: right;
 }
 @media (max-width: 857px) {
-  .quickview-modal .quickview-inner .media .media-body .quickview-options .wrap-quantity {
+  .quickview-modal .quickview-inner .content .body .quickview-options .wrap-quantity {
     float: initial;
   }
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .wrap-quantity label {
+.quickview-modal .quickview-inner .content .body .quickview-options .wrap-quantity label {
   color: #696767;
   font-size: 14px;
   font-weight: normal;
   margin-right: 10px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .wrap-quantity input[type="text"] {
+.quickview-modal .quickview-inner .content .body .quickview-options .wrap-quantity input[type="text"] {
   border: 1px solid #e9e9e7;
   border-radius: 6px;
   height: 32px;
@@ -9990,26 +9969,26 @@ header.header .top-links li .child-box ul li a.highlight {
   font-size: 22px;
   text-align: center;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .select2-container--default .select2-selection--single {
+.quickview-modal .quickview-inner .content .body .quickview-options .select2-container--default .select2-selection--single {
   border: 1px solid #e9e9e7;
   border-radius: 6px;
   height: 32px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .select2-container--default .select2-selection--single .select2-selection__rendered {
+.quickview-modal .quickview-inner .content .body .quickview-options .select2-container--default .select2-selection--single .select2-selection__rendered {
   color: #696767;
   font-size: 12px;
   line-height: 30px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .select2-container--default .select2-selection--single .select2-selection__arrow {
+.quickview-modal .quickview-inner .content .body .quickview-options .select2-container--default .select2-selection--single .select2-selection__arrow {
   top: -2px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .select2-container--default .select2-selection--single .select2-selection__arrow:after {
+.quickview-modal .quickview-inner .content .body .quickview-options .select2-container--default .select2-selection--single .select2-selection__arrow:after {
   font-size: 24px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .selected-list {
+.quickview-modal .quickview-inner .content .body .quickview-options .selected-list {
   font-size: 0;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .selected-list li {
+.quickview-modal .quickview-inner .content .body .quickview-options .selected-list li {
   background-color: #e9e9e7;
   border-radius: 6px;
   display: inline-block;
@@ -10017,13 +9996,13 @@ header.header .top-links li .child-box ul li a.highlight {
   margin: 0 5px 5px 0;
   padding: 4px 18px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .add-topping-checkbox label,
-.quickview-modal .quickview-inner .media .media-body .quickview-options .require-checkbox label {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-checkbox label,
+.quickview-modal .quickview-inner .content .body .quickview-options .require-checkbox label {
   padding-left: 30px;
   padding-top: 5px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .add-topping-checkbox label:after,
-.quickview-modal .quickview-inner .media .media-body .quickview-options .require-checkbox label:after {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-checkbox label:after,
+.quickview-modal .quickview-inner .content .body .quickview-options .require-checkbox label:after {
   border-width: 2px;
   border-color: #02b691;
   border-style: solid;
@@ -10035,26 +10014,108 @@ header.header .top-links li .child-box ul li a.highlight {
   transform: translateY(-50%);
   width: 22px;
 }
-.quickview-modal .quickview-inner .media .media-body .quickview-options .add-topping-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after,
-.quickview-modal .quickview-inner .media .media-body .quickview-options .require-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after,
+.quickview-modal .quickview-inner .content .body .quickview-options .require-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after {
   background-position: none !important;
   background: url("../images/checked.png") no-repeat !important;
 }
-.quickview-modal .quickview-inner .media .media-body .heart-icon {
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab {
+  border: 1px solid #e0e0e0;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills {
+  border-bottom: 1px solid #e0e0e0;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li {
+  width: 20%;
+  margin-left: 0 !important;
+  background-color: #eeeeee;
+}
+@media (max-width: 530px) {
+  .quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li {
+    height: 55px;
+  }
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li.active {
+  background-color: #02b691 !important;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li.active a {
+  color: #ffffff;
+  background-color: #02b691 !important;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li.active a:hover {
+  background-color: #02b691 !important;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li a {
+  background-color: #eeeeee;
+  border-radius: 0;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 400;
+}
+@media (max-width: 530px) {
+  .quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .nav-pills li a {
+    padding-left: 5px !important;
+    font-size: 12px;
+  }
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content {
+  border-color: #e0e0e0;
+  background-color: #eeeeee;
+  padding: 5px 15px;
+  max-height: 200px;
+  overflow-y: auto;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox label {
+  padding-left: 30px;
+  color: #515252;
+  font-size: 14px;
+  font-weight: 400;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox label:after {
+  border-width: 2px;
+  border-color: #bbbbbb;
+  border-style: solid;
+  content: "";
+  height: 21px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 22px;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox label:before {
+  display: none;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .add-topping-content #addToppingTab .tab-content .topping-checkbox input[type=checkbox].css-checkbox:checked + label.css-label:after {
+  background-position: none !important;
+  background: url("../images/checked.png") no-repeat !important;
+}
+.quickview-modal .quickview-inner .content .body .quickview-options .require-content .note {
+  border: 2px solid #bbbbbb;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  padding: 5px;
+  width: 100%;
+  height: 136px;
+  color: #999999;
+  font-size: 14px;
+  font-weight: 400;
+}
+.quickview-modal .quickview-inner .content .body .heart-icon {
   cursor: pointer;
   display: inline-block;
 }
-.quickview-modal .quickview-inner .media .media-body .heart-icon.active {
+.quickview-modal .quickview-inner .content .body .heart-icon.active {
   content: "\f004";
 }
-.quickview-modal .quickview-inner .media .media-body .heart-icon:before {
+.quickview-modal .quickview-inner .content .body .heart-icon:before {
   color: #f34336;
   content: "\f08a";
   font-family: FontAwesome;
   font-size: 36px;
   line-height: 1;
 }
-.quickview-modal .quickview-inner .media .media-body .total {
+.quickview-modal .quickview-inner .content .body .total {
   background-color: #02b691;
   border-radius: 6px;
   color: #fff;
@@ -10064,18 +10125,18 @@ header.header .top-links li .child-box ul li a.highlight {
   margin: 0 0 0 20px;
   padding: 6px 16px 5px;
 }
-.quickview-modal .quickview-inner .media .media-body .total li {
+.quickview-modal .quickview-inner .content .body .total li {
   border-right: 1px solid #fff;
   display: inline-block;
   margin-right: 8px;
   padding-right: 10px;
 }
-.quickview-modal .quickview-inner .media .media-body .total li:last-child {
+.quickview-modal .quickview-inner .content .body .total li:last-child {
   border-right: none;
   margin-right: 0;
   padding-right: 0;
 }
-.quickview-modal .quickview-inner .media .media-body .total li .add-btn {
+.quickview-modal .quickview-inner .content .body .total li .add-btn {
   background-color: transparent;
   border: none;
   font-size: 24px;
